css clip-path to add

--- a/kitchen.html
+++ b/kitchen.html
@@ -1,6 +1,7 @@
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<link rel="stylesheet" href="css/main.css">
 <!------ Include the above in your HEAD tag ---------->
 
  <!-- No navbar  section as of now-->
@@ -47,8 +48,9 @@ Ensure kettle cords don’t hang down within reach of your child. Use appliances
 Living and family areas
 
 </p>
-                 <div class="image-block">
-                     <img src="/img/Safe.jpg" class="img-responsive" >
+                 <div class="image-container" id="kitchen-image-block">
+                    <img src="/img/DiningTable.jpg" id="kitchen-first-image">
+                     <img src="/img/naomi-kitchen.jpg" id="naomi-kitchen">
                  </div>
              </div>
             <div class="col-lg-3  col-md-3 col-sm-12">
